--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
     </header>
 
     <main class="1-main">
+        <!--==== HOME ====-->
+        <section class="home">
+            <div class="home__container bd-grid">
+                <div class="home__img">
+                    <img src="img/img1.png" alt="" data-speed="-2" class="move">
+                    <img src="img/img2.png" alt="" data-speed="2" class="move">
+                    <img src="img/img3.png" alt="" data-speed="2" class="move">
+                    <img src="img/img4.png" alt="" data-speed="-2" class="move">
+                    <img src="img/img5.png" alt="" data-speed="-2" class="move">
+                    <img src="img/img6.png" alt="" data-speed="2" class="move">
+                </div>
+
+                <div class="home__data">
+                    <h1 class="home__title">Coffee<br> Drink 3D</h1>
+                    <p class="home__description">Let's help discover the best coffee drink <br> of the week.</p>
+                    <a href="#" class="home__button">Get Started</a>
+                </div>
+            </div>
+        </section>
 
     </main>
 
